--- a/Css/main.css
+++ b/Css/main.css
@@ -29,3 +29,14 @@ body {
     overflow: scroll;
     gap: 42px;
 }
+
+.backgroundImg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    z-index: -2;
+}
