--- a/Css/main.css
+++ b/Css/main.css
@@ -104,6 +104,7 @@ main {
     transition-duration: 200ms;
     cursor: pointer;
     text-decoration: none;
+    color: var(--text-color);
 }
 
 .link:hover {
@@ -113,7 +114,7 @@ main {
 .linkBackground {
     position: absolute;
     inset: 0;
-    background: var(--bg-color);
+    background: black;
     opacity: 0.6;
     z-index: -1;
 }
@@ -122,3 +123,34 @@ main {
     font-size: 0.8rem;
 }
 
+@media (min-width: 640px) {
+    body {
+        gap: 64px;
+        padding: 80px 14px;
+    }
+
+    header,
+    main {
+        gap: 24px;
+    }
+
+    header img {
+        max-width: 200px;
+        padding-bottom: 24px;
+    }
+
+    header h1 {
+        font-size: 1em;
+        font-weight: 400;
+    }
+
+    header p {
+        font-size: 1.1em;
+        font-weight: 700;
+    }
+
+    .link p {
+        font-size: 1.1em;
+    }
+
+}
