--- a/Css/main.css
+++ b/Css/main.css
@@ -115,6 +115,7 @@ main {
     position: absolute;
     inset: 0;
     background: black;
+    border-radius: 8px;
     opacity: 0.6;
     z-index: -1;
 }
